recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:6: error: illegal start of simple expression
	avance(100,)
                   ^FourSquare:7: error: ')' expected but '}' found.
} 
^